# all-recipes-web-scraper

./: README.md  main.py  pyproject.toml
all_recipes_scraper/: all_recipes.py
